--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
   <section class="main-container">
-    <img src="./images/drawers.jpg" alt="">
+    <img class="main-img" src="./images/drawers.jpg" alt="">
     <div>
       <div>
         <h2>Shift the overall look and feel by adding these wonderful 
