desing in progress

--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
 <body>
   <section class="main-container">
     <img class="main-img" src="./images/drawers.jpg" alt="">
-    <div>
-      <div>
+    <div class="card">
+      <div class="card-text">
         <h2>Shift the overall look and feel by adding these wonderful 
         touches to furniture in your home</h2>
         <p>Ever been in a room and felt like something was missing? Perhaps 
@@ -26,11 +26,13 @@
           <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
         </div>
         <div class="avatar-section">
-          <img src="./images/avatar-michelle.jpg" alt="avatar michelle">
-          <p>Michelle Appleton</p>
-          <p>28 Jun 2020</p>
+          <img class="avatar-photo" src="./images/avatar-michelle.jpg" alt="avatar michelle">
+          <div>
+            <p class="name-p">Michelle Appleton</p>
+            <p>28 Jun 2020</p>
+          </div>
+          <button class="share-button"><img src="./images/icon-share.svg" alt="share button"></button>
         </div>
-        <button><img src="./images/icon-share.svg" alt="share button"></button>
       </div>
     </div>
   </section>
