desing in progress

--- a/index.html
+++ b/index.html
@@ -21,15 +21,17 @@
       <div>
         <div class="share-section">
           <p>SHARE</p>
-          <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
-          <a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a>
-          <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
+          <div>
+            <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
+            <a href="#"><img src="./images/icon-twitter.svg" alt="twitter"></a>
+            <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
+          </div>
         </div>
         <div class="avatar-section">
           <img class="avatar-photo" src="./images/avatar-michelle.jpg" alt="avatar michelle">
           <div>
             <p class="name-p">Michelle Appleton</p>
-            <p>28 Jun 2020</p>
+            <p class="date-p">28 Jun 2020</p>
           </div>
           <button class="share-button"><img src="./images/icon-share.svg" alt="share button"></button>
         </div>
