--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
         <p>Ever been in a room and felt like something was missing? Perhaps 
         it felt slightly bare and uninviting. I’ve got some simple tips 
         to help you make any room feel complete.</p>
-      </div>
+      </div class="share-avatar-container">
       <div>
         <div class="share-section">
           <p>SHARE</p>
