--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         to help you make any room feel complete.</p>
       </div class="share-avatar-container">
       <div>
-        <div class="share-section">
+        <div class="share-section activo">
           <p>SHARE</p>
           <div>
             <a href="#"><img src="./images/icon-facebook.svg" alt="facebook"></a>
@@ -27,7 +27,7 @@
             <a href="#"><img src="./images/icon-pinterest.svg" alt="pinterest"></a>
           </div>
         </div>
-        <div class="avatar-section">
+        <div class="avatar-section activo">
           <img class="avatar-photo" src="./images/avatar-michelle.jpg" alt="avatar michelle">
           <div>
             <p class="name-p">Michelle Appleton</p>
